--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,34 @@
-<p>navbar works!</p>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block">
+        <div class="container-fluid">
+            <a class="navbar-brand nav-link" target="_blank" routerLink="/home">
+                <img src="https://wallpapers.com/images/hd/avengers-silhouette-logo-5fx81a1barvgdm0u.png" alt="">
+            </a>
+            <div class="link">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" routerLink="/home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/admin">Admin</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav list-inline">
+                    <i class="bi bi-0-circle"></i>
+                    <li class="">
+                        <a class="nav-link" href="https://www.linkedin.com/in/alejandro-galiana-perez-a1567084/"
+                            rel="nofollow" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+</header>
