--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,9 @@
-<app-card></app-card>
+<div class="container">
+    <div class="row">
+        @for (heroe of heroes; track $index) {
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+            <app-card [heroe]="heroe"></app-card>
+        </div>
+        }
+    </div>
+</div>
